<resources>
    <string name="app_name">AllFavour</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_switch_to_register">Don\'t have an account click here</string>
    <string name="register_button_text">Register</string>
    <string name="action_switch_to_login">Already have an account click here</string>
    <string name="account_type">AllFavour</string>
    <string name="login_button_label">Login</string>
    <string name="login_fragmetn_label">Login</string>


    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Favour</string>

    <!--    Consumer-->sendNotification
    <string name="my_favours">My Favours</string>
    <string name="search">Search</string>
    <string name="my_interests">My Interests</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="provider_switch">Switch To Consumer</string>
    <string name="my_account">My Account</string>


    <!--    Consumer-->
    <string name="consumer_switch">Switch To Consumer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Error-->
    <string name="phoneNumber_wrong">Wrong format of phoneNumber</string>
    <string name="age_wrong">Wrong age</string>
    <string name="title_activity_google_sign_in_activty">GoogleSignInActivty</string>

    <!--    <string name="google_api_key">AIzaSyCHoTuB1Qw2idM9fsgWgOVDIhpiT1HSd7A</string>-->

</resources>
