<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.24000001" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:hint="@string/prompt_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email" app:layout_constraintEnd_toEndOf="@+id/email"
            android:hint="@string/prompt_password"/>
    <Button
            android:text="@string/register_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton" app:layout_constraintEnd_toEndOf="@+id/password"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"/>
    <TextView
            android:text="@string/action_switch_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchToLoginText"
            app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintEnd_toEndOf="@+id/password"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>